# ort_examples

c_cxx/: CMakeLists.txt
c_cxx/Snpe_EP/: README.md
c_cxx/accuracy_tool/: README.md
c_cxx/model-explorer/: CMakeLists.txt  EP_INFO.cpp  gemm-onnx.py  gemm_model.onnx  gemm_model_fixed.onnx  matmul-case.cpp  matmul_model.py  model-explorer.cpp
c_cxx/squeezenet/: README.md  main.cpp
